# ceng

./: vcs problem-solution presentation.pptx
CENG112/data/lectures/lecture04_structures_and_classes/src/: CMakeLists.txt  contact.h
CENG112/data/lectures/lecture08_sorting/src/: CMakeLists.txt  sort_insertion.cc  sort_selection.cc  sort_selection_struct.cc
CENG144/144assignments/: a01.tex
CENG144/Lecture Notes/: cipher.key.txt  ciphertext.txt
CENG313/Lab - Exec Examples-20181023/: exec3.c  exec4.c  exp1.c  exp2.c  exp3.c  exp4.c  exp5.c
CENG313/Lab - Fork Examples-20181023/: exercises  fork0.c  fork1.c  fork2.c  fork3.c
CENG313/Lab Example - Simple Process Scheduler-20181023/: binary.c  compile.sh  compileInside.txt  process1.c  process2.c  process3.c  processScheduler.h  simpleSchedulerTest.c
CENG313/OS Lab2 Examples (1)/: arrayExample.c  operations.c  operationsApp.c  printscan.c  printscanFunction.c  stringExample.c
CENG315/: SQL (1).pptx  sql_hw.sql  sql_hw_scripts.sql
CENG431/: CENG431_21_SOLID (3).pptx
CENG443/: uhem_commands.txt
CENG471/: 01_Introduction.pptx
Ceng421/: ceng421-syllabus.odt  final-2016-fall.odt  schedule-class.ods
MAN217/: 1 - Managers and Management.key  2 - Planning.key  3 - Organizing.key
ee210/: EE 210 LECTURE 1(1).pptx  EE 210 LECTURE 2.pptx  EE 210 LECTURE 3.pptx  EE 210 LECTURE 4 - 2.pptx  EE 210 LECTURE 4-1.pptx  EE 210 LECTURE 5.pptx  EE 210 LECTURE 6.pptx  EE 210 LECTURE 7 (1).pptx  EE 210 MIDTERM EXAMINATION.docx
ee271/: EE 271 MIDTERM FALL 2014.docx  R_versus_I_Movie.rar  SYLLABUS EE 271 FALL 2017.docx
(+396 files in other folders)
